[tool.poetry]
name = "pyspark-check"
version = "0.1.0"
description = "Data-quality checks for PySpark"
authors = ["Bartosz Mikulski <mail@mikulskibartosz.name>"]

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.0"
pandas = "^1.0.5"
numpy = "^1.19.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
